    database configuration files. Document it in doc/crashdb-conf.txt.
  * apport/ui.py: Support a new field "CrashDB" in apport reports which select
    a non-default crash database. Document this in doc/package-hooks.txt.

  [ Martin Pitt ]
  * apport/report.py: If a hook crashes with an exception, print it to
    stderr, for easier debugging of hooks.

 -- Martin Pitt <mpitt@debian.org>  Tue, 02 Sep 2008 17:05:13 +0200

apport (0.113) intrepid; urgency=low

  * apport-qt recommends update-notifier-kde instead of adept-notifier

 -- Anthony Mercatante <tonio@ubuntu.com>  Thu, 28 Aug 2008 15:02:20 +0200

apport (0.112) intrepid; urgency=low

  * apport/crashdb_impl/launchpad.py: Update attachment handling to current
    python-launchpad-bugs API, thanks Markus Korn!
  * apport/ui.py: Use gnome-panel as indicator for a running GNOME session;
    'gnome-session' now calls itself x-session-manager, which isn't useful
    to tell apart session types.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 07 Aug 2008 17:09:49 +0200

apport (0.111) intrepid; urgency=low

  The "(Kernel) OOPS, I dumped it again!" release.

  * apport/ui.py: Fix test_run_report_bug_unpackaged_pid() to work with the
    installed run-tests from the package as well.
  * apport/crashdb_impl/launchpad.py: Ignore broken LP bug tasks instead of
    crashing on them.
  * apport/report.py, add_proc_info(): Report the AppArmor or SELinux context
    in a new ProcAttrCurrent field, read from /proc/pid/attr/current.
    Document it in doc/data-format.tex. The field will not be added if the
    proc attribute cannot be read or isn't present. Thanks to Steve Beattie
    for the patch and the suggestion!
  * debian/local/setup-apport-retracer: Switch to intrepid.
  * debian/local/setup-apport-retracer: Fix installation of python-apt. Also
    install apt, to avoid library version mismatches to python-apt.
  * debian/apport.default: Enable apport by default again, now that we have
    working retracers.