@@ -13,8 +13,12 @@ apport (0.114) UNRELEASED; urgency=low
   [ Martin Pitt ]
   * apport/report.py: If a hook crashes with an exception, print it to
     stderr, for easier debugging of hooks.
+  * apport/crashdb_impl/launchpad.py: If PackageArchitecture is 'all', fall
+    back to looking at Architecture instead of not adding a
+    needs-$ARCH-retrace tag at all. This prevented signal crashes originating
+    from e. g. Python packages from being automatically retraced.
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 02 Sep 2008 17:05:13 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 04 Sep 2008 09:57:44 +0200
 
 apport (0.113) intrepid; urgency=low
 
